Add LICENSE, meta tags, social preview, and remove dev artifacts
Add MIT LICENSE file. Add Open Graph and Twitter Card meta tags for
link previews. Add screenshot as social preview image. Remove tracked
dev artifacts (checkpoint.json, plan.md, BUILD_REPORT.md) and add
them to .gitignore.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Handoff — Get Your Life Organized</title>
+    <meta name="description" content="Everything your family would need to know — accounts, documents, wishes — organized in one place. 100% private, no accounts, no servers." />
+    <meta property="og:title" content="Handoff — Get Your Life Organized" />
+    <meta property="og:description" content="Everything your family would need to know — accounts, documents, wishes — organized in one place. 100% private, no accounts, no servers." />
+    <meta property="og:image" content="https://handoff-one.vercel.app/social-preview.png" />
+    <meta property="og:url" content="https://handoff-one.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Handoff — Get Your Life Organized" />
+    <meta name="twitter:description" content="Everything your family would need to know — accounts, documents, wishes — organized in one place. 100% private, no accounts, no servers." />
+    <meta name="twitter:image" content="https://handoff-one.vercel.app/social-preview.png" />
   </head>
   <body>
     <div id="root"></div>
