SEO overhaul, new tagline, and landing page updates
- New tagline: "One document. Complete peace of mind."
- Full SEO: canonical URL, theme-color, JSON-LD structured data, fallback HTML for crawlers
- Added robots.txt (blocks private routes) and sitemap.xml
- Replaced footer trees with NGA painting as "Do it together" card background
- Updated social preview image
- Added .env to .gitignore

--- a/index.html
+++ b/index.html
@@ -4,20 +4,109 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Handoff — Get Your Life Organized</title>
-    <meta name="description" content="Everything your family would need to know — accounts, documents, wishes — organized in one place. 100% private, no accounts, no servers." />
-    <meta property="og:title" content="Handoff — Get Your Life Organized" />
-    <meta property="og:description" content="Everything your family would need to know — accounts, documents, wishes — organized in one place. 100% private, no accounts, no servers." />
+    <title>Handoff — One document. Complete peace of mind.</title>
+    <meta name="description" content="Everything your family would need to know — accounts, documents, wishes — organized into a single document you control entirely. 100% private, no accounts, no servers." />
+    <link rel="canonical" href="https://handoff-one.vercel.app/" />
+    <meta name="theme-color" content="#7C6E54" />
+    <meta property="og:title" content="Handoff — One document. Complete peace of mind." />
+    <meta property="og:description" content="Everything your family would need to know — accounts, documents, wishes — organized into a single document you control entirely. 100% private, no accounts, no servers." />
     <meta property="og:image" content="https://handoff-one.vercel.app/social-preview.png" />
     <meta property="og:url" content="https://handoff-one.vercel.app" />
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Handoff" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Handoff — Get Your Life Organized" />
-    <meta name="twitter:description" content="Everything your family would need to know — accounts, documents, wishes — organized in one place. 100% private, no accounts, no servers." />
+    <meta name="twitter:title" content="Handoff — One document. Complete peace of mind." />
+    <meta name="twitter:description" content="Everything your family would need to know — accounts, documents, wishes — organized into a single document you control entirely. 100% private, no accounts, no servers." />
     <meta name="twitter:image" content="https://handoff-one.vercel.app/social-preview.png" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Handoff",
+      "url": "https://handoff-one.vercel.app",
+      "description": "Everything your family would need to know — accounts, documents, wishes — organized into a single document you control entirely.",
+      "applicationCategory": "UtilitiesApplication",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Santiago Alonso",
+        "url": "https://santiagoalonso.com"
+      }
+    }
+    </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Fallback content for search engines and AI tools (React replaces this on load) -->
+      <header>
+        <h1>Handoff</h1>
+        <p>One document. Complete peace of mind.</p>
+      </header>
+      <main>
+        <section>
+          <h2>One document so your family never has to guess.</h2>
+          <p>Handoff guides you through everything your family would need to know — accounts, documents, wishes, and more — and produces a single document you control entirely.</p>
+          <p>Free forever. No account needed. Nothing stored online.</p>
+        </section>
+        <section>
+          <h2>Why Handoff</h2>
+          <p>Everything your family would need, in one place.</p>
+          <h3>Structured completeness</h3>
+          <p>Twelve sections modeled on what estate attorneys cover with clients. Surfaces everything most people forget.</p>
+          <h3>Zero-trust privacy</h3>
+          <p>Nothing leaves your browser. No accounts, no servers, no data collection. Your information stays on your device.</p>
+          <h3>A gift to your family</h3>
+          <p>Thirty minutes now saves your family weeks of confusion and stress when it matters most.</p>
+          <h3>Complete in one sitting</h3>
+          <p>Skip what doesn't apply, fill in what does. Save your draft and come back anytime.</p>
+        </section>
+        <section>
+          <h2>How it works</h2>
+          <h3>1. Answer guided questions</h3>
+          <p>Walk through twelve sections covering contacts, accounts, insurance, digital life, legal documents, debts, dependents, and personal wishes.</p>
+          <h3>2. Download your document</h3>
+          <p>Get a professionally formatted PDF or Markdown file — your Handoff document.</p>
+          <h3>3. Store it, share it, done</h3>
+          <p>Put a copy in your safe, share with your spouse, or give to your attorney.</p>
+        </section>
+        <section>
+          <h2>Your data never leaves your device</h2>
+          <p>Handoff runs entirely in your browser. No servers, no accounts, no analytics. No database to hack because there is no database.</p>
+          <ul>
+            <li>No account creation required</li>
+            <li>No data transmitted to any server</li>
+            <li>Everything saved locally in your browser</li>
+            <li>Export your document and clear your data anytime</li>
+          </ul>
+        </section>
+        <section>
+          <h2>12 sections covered</h2>
+          <ol>
+            <li>The Basics</li>
+            <li>Key Contacts</li>
+            <li>Financial Accounts</li>
+            <li>Insurance Policies</li>
+            <li>Property &amp; Assets</li>
+            <li>Digital Life</li>
+            <li>Legal Documents</li>
+            <li>Debts &amp; Liabilities</li>
+            <li>Business Interests</li>
+            <li>Dependents &amp; Pets</li>
+            <li>Personal Wishes</li>
+            <li>Sign &amp; Finish</li>
+          </ol>
+        </section>
+      </main>
+      <footer>
+        <p>Handoff — Free, open-source, yours to keep.</p>
+        <p>Made by <a href="https://santiagoalonso.com">santiagoalonso.com</a></p>
+      </footer>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
